Fixed some bugs, added description to the swagger
