# src/routes/open/open.js
@@ -8,6 +8,26 @@ const { ioObject } = require('../../socket')
 const { isLoggedInValidator } = require('../../middlewares/authorization');
 
 router.post('/', isLoggedInValidator, async (req, res) => {
+    // #swagger.summary = 'Used for opening the gate. User has to be logged in or send a plate in the body. To open the gate remotely from the phone provide an access token, for microcontroller provide an access token and the plate in the body. After successfully finding an reservation the server will emit an open event to all the sockets connected.'
+
+    /*  #swagger.parameters['authorization'] = {
+                in: 'header',
+                description: 'Access token',
+    } */
+
+    /*  #swagger.parameters['body'] = {
+            "name": "body",
+            "in": "body",
+            "@schema": {
+                "type": "object",
+                "properties": {
+                    "plate": {
+                        "example": "string",
+                        "type": "string",
+                    }
+                }
+            }
+    } */
     const id = req.userId
     const plate = req.body.plate
 
